[package]
name = "quantumfuse-sdk"
version = "0.1.0"
edition = "2021"
authors = ["CreoDAMO"]
description = "The QuantumFuse SDK: A comprehensive framework for building decentralized applications on the QuantumFuse Blockchain."
repository = "https://github.com/CreoDAMO/quantumfuse-sdk"
license = "Apache 2.0"

[workspace]
members = [
    "src/ai_analytics_dashboard",
    "src/ai_defi_yield_execution_smart_contract",
    "src/ai_defi_yield_optimization_api",
    "src/ai_defi_yield_optimization",
    "src/ai_execution_speed_benchmarking",
    "src/ai_forecasting_api",
    "src/ai_metaverse_economy_dashboard",
    "src/ai_metaverse_market_simulation",
    "src/ai_metaverse_nft_and_land_valuation",
    "src/ai_metaverse_npc_agents",
    "src/ai_quantum_governance_system",
    "src/ai_treasury_api",
    "src/ai_treasury_execution_smart_contract",
    "src/ai_treasury_forecasting",
    "src/blockchain",
    "src/consensus_mechanism",
    "src/quantum_bridge",
    "src/quantum_medical_management",
    "src/quantum_metaverse",
    "src/quantum_random_number_generator",
    "src/quantum_realestate_tokenization",
    "src/quantum_services",
    "src/quantum_supplychain_management",
    "src/quantum_treasury_api",
    "src/quantum_treasury_smart_contract",
    "src/quantumfuse_coin",
    "src/shard",
    "src/transaction",
    "src/wallet",
    "src/webrtc",
    "src/zkp_voting"
]
resolver = "2"

[dependencies]

# Blockchain & Smart Contracts
substrate-api-client = "1.16.0"
cosmwasm-std = "2.2.0"
ethabi = "18.0.0"
foundry = "0.3.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"

# Quantum Cryptography
pqcrypto = "0.18.1"
ed25519-dalek = "2.1.1"
ring = "0.17.8"

# AI & Machine Learning
tensorflow = "0.21.0"
rust-bert = "0.23.0"

# Networking & Web3
tokio = { version = "1.43.0", features = ["full"] }
reqwest = { version = "0.12.12", features = ["json", "blocking"] }
warp = { version = "0.3.7", features = ["tls"] }
axum = { version = "0.8.1", features = ["ws"] }
hyper = { version = "1.6.0", features = ["full"] }

# Metaverse & 3D Graphics
bevy = "0.15.1"
rapier3d = "0.23.0"
wgpu = "24.0.1"

# WebRTC & Streaming
webrtc = "0.12.0"
libdatachannel = "0.2.0+0.20.1"

# NFT & Storage
ipfs-api = "0.17.0"
rust-ipfs = "0.14.1"
arweave-rs = "0.2.0"

# Quantum Security & Governance
ark-std = "0.4.0"
ark-crypto-primitives = "0.4.0"
ark-groth16 = "0.4.0"
halo2_proofs = "0.3.0"

# Audio Processing
cpal = "0.15.3"
rodio = "0.20.1"
symphonia = { version = "0.5.4", features = ["all"] }
opus = "0.3.0"
libsamplerate = "0.1.0"
