[package]
name = "quantumfuse-sdk"
version = "0.1.0"
edition = "2021"
authors = ["CreoDAMO"]
description = "The QuantumFuse SDK: A comprehensive framework for building decentralized applications on the QuantumFuse Blockchain."
repository = "https://github.com/CreoDAMO/quantumfuse-sdk"
license = "Apache 2.0"

[dependencies]
# Core Quantum Blockchain & Smart Contracts
substrate-api-client = "1.16.0"
cosmwasm-std = "2.2.0"
ethabi = "18.0.0"
foundry = "0.3.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
ruzstd = "0.8"

# Quantum & Post-Quantum Cryptography
pqcrypto = "0.18.1"
ed25519-dalek = "2.1.1"
ring = "0.17.8"
base58 = "0.2.0"
blake2 = "0.10.6"
blake3 = "1.5.5"
rand = { version = "0.8.5", features = ["std"] }

# AI & Machine Learning for Metaverse Intelligence
tensorflow = "0.21.0"
ndarray = "0.16.1"
rust-bert = "0.23.0"

# Networking & Real-Time Communication
tokio = { version = "1.43.0", features = ["full"] }
reqwest = { version = "0.12.12", features = ["json"] }
tokio-tungstenite = "0.20.1"
tungstenite = "0.21.0"
warp = "0.3.7"
axum = { version = "0.8.1", features = ["ws"] }
hyper = { version = "1.6.0", features = ["full"] }
tower = "0.5.2"

# Metaverse & 3D Graphics
bevy = "0.15.1"
rapier3d = "0.23.0"
wgpu = "24.0.1"
glam = "0.29.2"
nalgebra = "0.33.2"
gltf = "1.4.1"

# VR & AR Support
openxr = "0.19.0"
leptos = "0.7.5"
web-sys = { version = "0.3.77", features = ["WebSocket"] }

# NFT & Digital Asset Management
ipfs-api = "0.17.0"
ethers = "2.0.14"
rust-ipfs = "0.14.1"
arweave-rs = "0.2.0"

# AI-Powered Governance & Reputation
log = "0.4.25"
env_logger = "0.11.6"
uuid = "1.12.1"

# Quantum AI Dispute Resolution & Law Enforcement
ark-std = "0.4.0"
ark-crypto-primitives = "0.4.0"
ark-ff = "0.4.0"
ark-groth16 = "0.4.0"
ark-serialize = "0.4.0"
ark-bls12-381 = "0.4.0"
halo2_proofs = "0.3.0"
rayon = "1.10.0"

# Audio Processing & System Sound Support
alsa = "0.9.1"
alsa-sys = "0.3.1"
cpal = "0.15.3"
rodio = "0.20.1"
symphonia = { version = "0.5.4", features = ["all"] }
hound = "3.5.1"
opus = "0.3.0"
libsamplerate = "0.1.0"

# WebRTC Integration for Audio Streaming
webrtc = "0.12.0"
libdatachannel = "0.2.0+0.20.1"

# Smart Contracts for Music Royalties
subxt = "0.38.1"

# Update the syn crate to the latest version
syn = "2.0.98"